--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -2,34 +2,41 @@
     border: none;
     background-color: #2231AA;
     color: white;
-    padding: 13px 20px;
+    padding: 16px 32px 16px 32px;
     border-radius: 2px;
-    margin-right: 30px;
-    font-weight: 700;
+    font-weight: 600;
+    font-size: 18px;
+    height: 56px;
 }
 
 .button-secondary {
     border: none;
     background-color: #DADADA;
     color: #2f2e2e;
-    padding: 13px 20px;
+    padding: 16px 32px 16px 32px;
     border-radius: 2px;
     margin-right: 30px;
-    font-weight: 700;
+    font-weight: 600;
+    font-size: 18px;
+    width: 159px;
+    height: 56px;
 }
 
 .button-secondary-2 {
     border: none;
     background-color: transparent;
     color: #fe2e2e;
-    padding: 13px 20px;
+    padding: 16px 32px 16px 32px;
     border-radius: 2px;
     margin-right: 30px;
-    font-weight: 700;
+    font-weight: 600;
+    font-size: 18px;
+    width: 174px;
+    height: 56px;
 }
 
 .button-primary:active {
-    background-color: #4954aa;
+    background-color: #5360CD;
 }
 
 .button-secondary:active {
@@ -41,8 +48,8 @@
 }
 
 .button-primary:disabled {
-    background-color: #e6e5e5;
-    color: #727171;
+    background-color: #E8E8E8;
+    color: #8D8E97;
 }
 
 .button-secondary:disabled {
